project(sprint5)

set(CMAKE_CXX_STANDARD 17)

add_executable(sprint5 main.cpp document.cpp document.h paginator.h read_input_functions.cpp read_input_functions.h request_queue.cpp request_queue.h search_server.cpp search_server.h string_processing.cpp string_processing.h remove_duplicates.cpp remove_duplicates.h)
